# zefiro

./: AUTHORS  Makefile.am  Makefile.in  config.h.in  config.h.in~  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  traces.0  traces.1
branches/socket/: AUTHORS  Makefile.in  config.h.in  configure.ac  reconf
branches/socket/autom4te.cache/: output.0  traces.0
branches/socket/include/: connectPLC.h  threadPLC.h  zefiro.h
branches/socket/lib/: README
branches/socket/scripts/: zefirod.check.in  zefirod.crontab.in  zefirod.in  zefirod.mail.in
branches/socket/src/: Makefile.am  Makefile.in  connectPLC.c  threadPLC.c  zefiro.c
branches/socket/test/: Makefile.am  Makefile.in  test02.c  test03.c
include/: connectPLC.h  sqlPLC.h  statePLC.h  threadPLC.h  zefiro.h
scripts/: Makefile.am  Makefile.in  PLC.sql.in  zefirod.in
src/: Makefile.am  Makefile.in  connectPLC.c  readPLC.c  sqlPLC.c  statePLC.c  threadPLC.c  zefiro.c
test/: Makefile.am  Makefile.in  test01.c  test02.c  test03.c
trunk/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.h.in~  configure  configure.ac
trunk/autom4te.cache/: output.0  output.1  traces.0  traces.1
trunk/include/: connectPLC.h  readPLC.h  sqlPLC.h  statePLC.h  zefiro.h
trunk/lib/: README
trunk/scripts/: Makefile.am  Makefile.in  rsyslog.conf.in  zefirod.in
trunk/src/: Makefile  connectPLC.c  sqlPLC.c  statePLC.c  zefiro.c
trunk/src/.deps/: zefiro-zefiro.Po
trunk/test/: Makefile  Makefile.am  Makefile.in  test01.c  test02.c  test03.c
trunk/test/.deps/: test01-readPLC.Po  test01-test01.Po
